Bug 161340 - Print dialog: hiding drawing shapes no longer works
Summary: Print dialog: hiding drawing shapes no longer works
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2024-05-30 09:29 UTC by Gabor Kelemen (Collabora)
Modified: 2024-06-06 10:43 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file with image and shapes (87.26 KB, application/vnd.oasis.opendocument.text)
2024-05-30 09:29 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue in Writer (71.78 KB, image/png)
2024-05-30 09:30 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-05-30 09:29:23 UTC
Created attachment 194449 [details]
Example file with image and shapes

Attached file contains some images and drawing shapes.

In the Print dialog the "Images and graphic elements" option no longer hides the drawing shapes from printing, only the image.

1. Open attached file
2. Open Print dialog, go to the Writer tab
3. Uncheck "Images and other graphic objects"
-> the house image disappears from the preview, but the note and the "4 hexagons" shapes does not. 

This used to work in 24.2

Bibisected to:
https://git.libreoffice.org/core/+/6cdf523f179f3e7ed94267502a5fe3d1247398cc%5E%21/#F2

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Dec 14 12:36:46 2023 +0100
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Mon Dec 18 09:35:29 2023 +0100

[API CHANGE] tdf#158041 Remove unused drawing printing option from sw

The checkbox works for images, but should work for the shapes as well.
Comment 1 Gabor Kelemen (Collabora) 2024-05-30 09:30:25 UTC
Created attachment 194450 [details]
Screenshot of the issue in Writer
Comment 2 Commit Notification 2024-06-06 09:12:38 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3735d43955a000db8b6fff04a2214793be649c4b

tdf#161340 Revert partially 6cdf523f179f3e7ed94267502a5fe3d1247398cc

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.