PaintSwFrame is always called with a nullptr for pPrintData

ever since
    commit 3735d43955a000db8b6fff04a2214793be649c4b
    Author: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
    Date:   Wed Jun 5 09:14:23 2024 +0200
    tdf#161340 Revert partially 6cdf523f179f3e7ed94267502a5fe3d1247398cc

Change-Id: I2f01ad09e6d0f758ff4e51be96008e93750e9f8a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174300
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins